1,优化聊天； 2,增加聊天界面礼物赠送功能

--- a/MidnightArtifact/app/src/main/AndroidManifest.xml
+++ b/MidnightArtifact/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
         <activity android:name=".ui.yunxinfriend.HisVisitorActivity"/>
         <activity android:name=".ui.yunxinfriend.HisGuardianActivity"/>
         <activity android:name=".ui.yunxinfriend.P2PChatActivity"/>
+        <activity android:name=".ui.yunxinfriend.SelectGiftActivity"
+            android:theme="@style/giftStyle" android:windowSoftInputMode="stateUnchanged|adjustPan" />
 
         <activity android:name="com.choicepicture_library.ImageGridActivity"/>
 
