--- a/MidnightArtifact/app/src/main/AndroidManifest.xml
+++ b/MidnightArtifact/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity android:name=".ui.yunxinfriend.HisVisitorActivity"/>
         <activity android:name=".ui.yunxinfriend.HisGuardianActivity"/>
         <activity android:name=".ui.yunxinfriend.P2PChatActivity"/>
+        <activity android:name=".ui.yunxinfriend.MessageCenterActivity"/>
         <activity android:name=".ui.yunxinfriend.SelectGiftActivity"
             android:theme="@style/giftStyle" android:windowSoftInputMode="stateUnchanged|adjustPan" />
 
