--- a/MidnightArtifact/app/src/main/AndroidManifest.xml
+++ b/MidnightArtifact/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ui.personal.AddressListInvitationActivity"/>
         <activity android:name=".ui.personal.TaskListActivity"/>
         <activity android:name=".ui.personal.RechargeActivity"/>
+        <activity android:name=".ui.personal.MyGiftActivity"/>
         <activity android:name=".ui.base.BaseGestureLockActivity" android:launchMode="singleTask"/>
         <activity android:name=".ui.base.WebPageActivity"/>
         <activity android:name=".ui.mall.TwoLevelCategoryListActivity"/>
